# HotStream

./: .gitignore  README.md  main.py  pyproject.toml  vercel.json
.claude/context/: client-tourism-background.md
.claude/prds/: tourism-hotspot-marketing.md
api/: index.py
hotstream/: __init__.py  copywriter.py  db.py  image_scraper.py  scenic_profile.py  scraper.py  server.py  video_analyzer.py
scenic_profiles/qianshan-siji-muge/: advantages.md  nearby-attractions.md  overview.md  writing-rules.md
tests/: test_bilibili_scraper.py  test_bilibili_server.py  test_copy_api.py  test_copywriter.py  test_db.py  test_db_api.py  test_editor_page.py  test_image_proxy.py  test_image_scraper.py  test_multi_source_scraper.py  test_scenic_profile.py  test_scraper.py  test_server.py  test_vercel_deploy.py  test_video_analyzer.py
ui/: editor.html  index.html
